base/control-plane/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: control-plane
  namespace: control-plane
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
    - name: https
      port: 443
      targetPort: 8443
      protocol: TCP
  selector:
    app: control-plane
